<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TuteLab4</string>
    <string name="tvTitle">Register Student</string>
    <string name="edtStudentId">Enter Student ID</string>
    <string name="tvYear">Select Academic Year</string>
    <string name="tvSemester">Select the Semister</string>
    <string name="btnSubmit">SUBMIT</string>
    <string name="btnCancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="cbAgreement">I agree to terms and conditions</string>
    <string name="Spinner_1">Spinner!</string>
    <string name="Spinner_2">Spinner2</string>



    <string-array name="years">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="semesters">
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>


</resources>