<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="329dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/tvTitle"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/edtStudentId"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtStudentId" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="331dp"
        android:layout_height="49dp"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:text="@string/tvYear"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spnYear"
        android:layout_width="330dp"
        android:layout_height="54dp"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:contentDescription="@string/Spinner_1"
        android:entries="@array/years" />

    <TextView
        android:id="@+id/tvSemester"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:text="@string/tvSemester"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/SpnSemester"
        android:layout_width="330dp"
        android:layout_height="49dp"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:contentDescription="@string/Spinner_2"
        android:entries="@array/semesters" />

    <CheckBox
        android:id="@+id/cbAgree"
        android:layout_width="330dp"
        android:layout_height="57dp"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:text="@string/cbAgreement" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="384dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:onClick="submit"
        android:text="@string/btnSubmit" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="387dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/btnCancel" />
</LinearLayout>